[package]
name = "vulkan-tutorial"
version = "0.1.0"
authors = ["André Twupack <atwupack@mailbox.org>"]
description = "Rust implementation of tutorial at vulkan-tutorial.com."
repository = "https://github.com/atwupack/vulkan4rust"
license = "MIT"


[dependencies]
clap = "^2.30"
vulkano = "^0.8"
vk-sys = "^0.3"
glfw ={version = "^0.21", features = ["vulkan"]}
vulkano-glfw = { version = "0.5.0", path = "../vulkano-glfw" }